--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,11 +1,9 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
+name: dogehouse # you probably want to 'snapcraft register <name>'
 version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+summary: Taking conversations into the moon # 79 char long summary
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+  DoegHouse is an Discord-like voice chats service, powered by
+  DogeCoins.
 
 confinement: devmode # use 'strict' once you have the right plugs and slots
 
