chore: More stuff did KEK
Signed-off-by: Andrei Jiroh Eugenio Halili <andreijiroh@madebythepins.tk>

--- a/.github/workflows/snapcrafter-ci.yml
+++ b/.github/workflows/snapcrafter-ci.yml
@@ -21,33 +21,15 @@ jobs:
     # Checkout the code of our Repository
     - uses: actions/checkout@v2
 
-    # Do the build!
-    - id: build
-      run: |
-        # Enable docker daemon support for --platform parameter
-        echo '{"experimental": true}' | sudo tee /etc/docker/daemon.json > /dev/null
-        sudo systemctl restart docker
+    - name: Snap DogeHouse Electrob app
+      uses: diddlesnaps/snapcraft-multiarch-action@v1
+      id: snapcraft
 
-        # Configure qemu-user-static
-        docker run --rm --tty \
-          --security-opt apparmor:unconfined \
-          --cap-add SYS_ADMIN \
-          multiarch/qemu-user-static --reset -p yes
-
-        # Run snapcraft
-        docker run --rm --tty \
-          --security-opt apparmor:unconfined \
-          --cap-add SYS_ADMIN \
-          --device /dev/fuse \
-          --volume /sys \
-          --volume /sys/fs/cgroup:/sys/fs/cgroup:ro \
-          --volume $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
-          --workdir $GITHUB_WORKSPACE \
-          --platform "${{ matrix.architecture }}" \
-          --env PLAYTEST="${{ matrix.playtest }}" \
-          diddledan/snapcraft:core18
-
-        echo ::set-output name=snap::$(find $GITHUB_WORKSPACE -maxdepth 3 -type f -name "*.snap" | head -n1)
+    - name: Archive as Action Artifact on Snapcrafters Archive soon
+      uses: actions/upload-artifact@v2
+      with:
+        name: 'snapcrafters-archive.thepinsteam.dev/@snapcrafters-bot/dogehouse-app-artifacts'
+        path: ${{ steps.snapcraft.outputs.snap }}
 
     # Release this Snap to the channel we choose.
     #- uses: snapcore/action-publish@v1
