--- a/.github/workflows/snapcrafter-ci.yml
+++ b/.github/workflows/snapcrafter-ci.yml
@@ -18,6 +18,14 @@ jobs:
         - linux/arm64
         - linux/arm/v7
     steps:
+    # Clean up stuff
+    - name: Cleaning stuff first
+      run: |
+	sudo rm -rf /usr/share/dotnet
+	sudo rm -rf /opt/ghc
+	sudo rm -rf "/usr/local/share/boost"
+	sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
     # Checkout the code of our Repository
     - uses: actions/checkout@v2
 
