chore: GitHub Actions is really a mess
Will use CircleCI for this.

Signed-off-by: Andrei Jiroh Eugenio Halili <andreijiroh@madebythepins.tk>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -34,7 +34,7 @@ apps:
       # libappindicator has readable resources.
       TMPDIR: $XDG_RUNTIME_DIR
 parts:
-  electron-quick-start:
+  dogehouse:
     plugin: nil
     source: https://github.com/benawad/dogehouse.git
     override-build: |
