chore: More syntax error fixes
After this, I would like to abandon the children. And, of course,
no Lillian murder was happened during the production of
Gildedguy Story 5, so don't ping me again.

Signed-off-by: Andrei Jiroh Eugenio Halili <andreijiroh@madebythepins.tk>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -6,8 +6,8 @@ description: |
   DogeCoin, to take voice-based conversations into the moon.
 
 # Since we're still testing the Electron app, we'll go into
-# the edge channel.
-grade: edge
+# the edge/devel channel.
+grade: devel
 
 # Chnage this into strict once the essentials are added
 confinement: devmode
