--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -15,7 +15,7 @@ confinement: devmode
 # Ensure that keep things up-to-date with the latest LTS as possible
 # but since Gnome 3.x wants Ububtu Core 18, we need to change that
 # ibto core18 until they support Core 20 finally.
-base: core20
+base: core18
 
 # WORK IN PROGRESS / PLEASE PROCEED AT YOUR OWN RISK
 # Sidenote: This was copied from https://www.electronjs.org/docs/tutorial/snapcraft#step-1-create-sample-snapcraft-project
@@ -25,7 +25,7 @@ apps:
     command: dogehouse/dogehouse --no-sandbox
     # but actually there's it!
     # just make sure you update your base inti core20
-    extensions: [gnome-3-28-2004]
+    extensions: [gnome-3-28]
     plugs:
     - network
     - network-bind
