circleci: Add 'snapcraft-stuff' context for publish workflow
Signed-off-by: Andrei Jiroh Eugenio Halili <andreijiroh@madebythepins.tk>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,9 +38,11 @@ workflows:
   main:
     jobs:
       - build
-      # - publish:
-      #    requires:
-      #      - build
-      #    filters:
-      #      branches:
-      #        only: master
+      - publish:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
+          context:
+            - snapcraft-stuff
