chore: Use core18 tag for cibuilds/snapcraft image
The CircleCI Docs on building and publishing Snaps are kinda
outdates.

Signed-off-by: Andrei Jiroh Eugenio Halili <andreijiroh@madebythepins.tk>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cibuilds/snapcraft:stable
+      - image: cibuilds/snapcraft:core18
         #auth:
         # username: mydockerhub-user
         # password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
@@ -18,7 +18,7 @@ jobs:
 
   publish:
     docker:
-      - image: cibuilds/snapcraft:stable
+      - image: cibuilds/snapcraft:core18
         #auth:
         #  username: mydockerhub-user
         #  password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
