chore: Add npm PATH as build environments
See https://forum.snapcraft.io/t/npm-is-missing-on-buildtime/23225/2
for details

Signed-off-by: Andrei Jiroh Eugenio Halili <andreijiroh@madebythepins.tk>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -41,9 +41,11 @@ parts:
   dogehouse:
     plugin: nil
     source: https://github.com/benawad/dogehouse.git
+    build-environment:
+    - PATH: "$PATH:$SNAPCRAFT_PART_BUILD/node_modules/.bin"
     override-build: |
         cd baklava
-        npm install electron electron-packager
+        npm install --production=false
         npx electron-packager . DogeHouse --icon=./icons/icon.png --overwrite --platform=linux --output=release-build --prune=true
         cp -rv ./DogeHouse-* $SNAPCRAFT_PART_INSTALL/dogehouse
     build-snaps:
