--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,10 +1,7 @@
 name: dogehouse
 version: '0.1'
-summary: Taking conversations into the moon
-description: |
-  DoegHouse is an Discord-like voice chats service, powered by
-  DogeCoin, to take voice-based conversations into the moon.
-
+summary: Taking voice conversations to the moon 🚀
+description: Livestream Discord-like voice rooms
 # Since we're still testing the Electron app, we'll go into
 # the edge/devel channel.
 grade: devel
@@ -60,6 +57,7 @@ parts:
         # workaround for build.snapcraft.io builds
         # https://bugs.launchpad.net/bugs/1886861
         if [ -n "$http_proxy" ]; then
+           echo ${http_proxy}
            export ELECTRON_GET_USE_PROXY=1
            export GLOBAL_AGENT_HTTP_PROXY="${http_proxy}"
            export GLOBAL_AGENT_HTTPS_PROXY="${http_proxy}"
