--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -66,7 +66,7 @@ parts:
         # build stuff goes here
         cd baklava
         npm install --production=false
-        tsc ./src/electron.ts --outDir ./dist
+        npx tsc ./src/electron.ts --outDir ./dist
         npx electron-packager . DogeHouse --icon=./icons/icon.png --overwrite --platform=linux --output=release-build --prune=true
         cp -rv ./DogeHouse-* $SNAPCRAFT_PART_INSTALL/DogeHouse
 
@@ -76,6 +76,7 @@ parts:
         # Desktop Icons stuff
         cp ./icons/icon.png ${SNAP}/usr/share/pixmaps/icon.png
         curl -o- https://raw.githubusercontent.com/MadeByThePinsHub/dogehouse-electron-app-snap/snap/gui/dogehouse.desktop > dogehouse.desktop
+        cat dogehouse.desktop
         mv dogehouse.desktop $SNAPCRAFT_PART_INSTALL/usr/share/applications/dogehouse.desktop
         sed -i 's|Icon=dogehouse|Icon=${SNAP}/usr/share/pixmaps/icon\.png|g' $SNAPCRAFT_PART_INSTALL/usr/share/applications/dogehouse.desktop
     build-snaps:
