snapcraft: More updates needed for the desktop icon
Signed-off-by: Andrei Jiroh Eugenio Halili <andreijiroh@madebythepins.tk>

--- a/snap/gui/dogehouse.desktop
+++ b/snap/gui/dogehouse.desktop
@@ -3,7 +3,7 @@ Name=DogeHouse
 Comment=Taking voice conversations to the moon 🚀
 GenericName=Social
 Exec=dogehouse
-Icon=${SNAP}/usr/share/pixmaps/icon.png
+Icon=${SNAP}/meta/gui/snapname.png
 Type=Application
 StartupNotify=true
 Categories=GNOME;GTK;Social;
