--- a/snap/gui/dogehouse.desktop
+++ b/snap/gui/dogehouse.desktop
@@ -3,7 +3,7 @@ Name=DogeHouse
 Comment=Taking voice conversations to the moon 🚀
 GenericName=Social
 Exec=dogehouse
-Icon=${SNAP}/meta/gui/snapname.png
+Icon=${SNAP}/meta/gui/dogehouse.png
 Type=Application
 StartupNotify=true
 Categories=GNOME;GTK;Social;
