--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -71,10 +71,10 @@ parts:
         cp -rv ./DogeHouse-* $SNAPCRAFT_PART_INSTALL/DogeHouse
 
         # for validation purposes only
-        ls $SNAPCRAFT_PART_INSTALL -al && ls $SNAPCRAFT_PART_INSTALL/DogeHouse -al
+        ls $SNAPCRAFT_PART_INSTALL/usr -al && ls $SNAPCRAFT_PART_INSTALL/DogeHouse -al
 
         # Desktop Icons stuff
-        sed -i 's|Icon=DogeHouse|Icon=${SNAP}/meta/gui/dogehouse\.png|g' ${SNAP}/meta/gui/dogehouse.desktop
+        #sed -i 's|Icon=DogeHouse|Icon=${SNAP}/meta/gui/dogehouse\.png|g' ${SNAP}/meta/gui/dogehouse.desktop
     build-snaps:
     - node/14/stable
     build-packages:
