--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+variables:
+  SNAPCRAFT_PROJECT_ROOT: ${PWD}
+
 include:
   - project: diddledan/snapcraft-multiarch-gitlab-ci
     ref: main
@@ -7,19 +10,23 @@ include:
     file: /snapcraft-architectures.yml
 
 snapcraft:amd64:
+  before_script:
+    - echo $SNAPCRAFT_PROJECT_ROOT
   extends:
     - .snapcraft
     - .amd64
-  artifacts:
-    paths:
-     - *.snap
+#  artifacts:
+#    paths:
+#     - *.snap
 snapcraft:arm64:
+  before_script:
+    - echo $SNAPCRAFT_PROJECT_ROOT
   extends:
     - .snapcraft
     - .arm64
-  artifacts:
-    paths:
-     - *.snap
+#  artifacts:
+#    paths:
+#     - *.snap
 
 # Publish to Snap Store
 # ref: https://circleci.com/docs/2.0/build-publish-snap-packages/
