snapcraft: Done some syntax fixing stuff
Signed-off-by: Andrei Jiroh Eugenio Halili <andreijiroh@madebythepins.tk>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -58,7 +58,7 @@ parts:
         # workaround for build.snapcraft.io builds
         # https://bugs.launchpad.net/bugs/1886861
         if [ -n "$http_proxy" ]; then
-           echo Proxy detected! It's at ${http_proxy}
+           echo "Proxy detected! It's at ${http_proxy}"
            export ELECTRON_GET_USE_PROXY=1
            export GLOBAL_AGENT_HTTP_PROXY="${http_proxy}"
            export GLOBAL_AGENT_HTTPS_PROXY="${http_proxy}"
