github-actions: Only build in amd64 arch.
Signed-off-by: Andrei Jiroh Eugenio Halili <andreijiroh@madebythepins.tk>

--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         platform:
         - amd64
-        - arm64
+        # - arm64
     steps:
     - uses: actions/checkout@v2
     - name: Free disk space
